// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DateInput /> spec renders the component with additional props 1`] = `
<DocumentFragment>
  <div
    class="wrapper"
    lang="en"
  >
    <div
      class="root"
    >
      <label
        class="label "
        for="date"
      >
        Foo
      </label>
      <div
        class="inputWrapper"
      >
        <input
          class="input hasButton"
          id="date"
          type="text"
          value=""
        />
        <div
          class="buttonWrapper"
        >
          <button
            aria-controls="hds-date-picker"
            aria-expanded="false"
            aria-label="Choose date"
            class="button"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="calendar"
              class="icon small"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M17 2C17.5523 2 18 2.44772 18 3V4H22V21H2V4H6V3C6 2.44772 6.44772 2 7 2C7.55228 2 8 2.44772 8 3V4H16V3C16 2.44772 16.4477 2 17 2ZM20 11H4V19H20V11ZM20 6H4V9H20V6Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<DateInput /> spec renders the component with default props 1`] = `
<DocumentFragment>
  <div
    class="wrapper"
    lang="en"
  >
    <div
      class="root"
    >
      <div
        class="inputWrapper"
      >
        <input
          class="input hasButton"
          id="date"
          type="text"
          value=""
        />
        <div
          class="buttonWrapper"
        >
          <button
            aria-controls="hds-date-picker"
            aria-expanded="false"
            aria-label="Choose date"
            class="button"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="calendar"
              class="icon small"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M17 2C17.5523 2 18 2.44772 18 3V4H22V21H2V4H6V3C6 2.44772 6.44772 2 7 2C7.55228 2 8 2.44772 8 3V4H16V3C16 2.44772 16.4477 2 17 2ZM20 11H4V19H20V11ZM20 6H4V9H20V6Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
